# basic_transformer

./: README.md  pyproject.toml
basic_transformer/: __init__.py  model.py
basic_transformer/data/: dataset.csv  ita.txt  nap.txt
basic_transformer/data/tokenizer/: tok_ita_1000.model  tok_ita_1000.vocab  tok_ita_10000.model  tok_ita_10000.vocab  tok_nap_1000.model  tok_nap_1000.vocab  tok_nap_10000.model  tok_nap_10000.vocab
basic_transformer/layers/: attention.py  decoder.py  encoder.py  mha.py  positional_encoding.py
basic_transformer/scripts/: dataset_preparation.py  train.py
basic_transformer/tokenizer/: tokenizer.py
